assets/css/main.css
/* ... */
/* Banner */

	#banner {
		display: -ms-flexbox;
		-ms-flex-pack: center;
		-ms-flex-align: center;
		padding: 8em 0 6em 0;
		-moz-align-items: center;
		-webkit-align-items: center;
		-ms-align-items: center;
		align-items: center;
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
		-moz-justify-content: center;
		-webkit-justify-content: center;
		-ms-justify-content: center;
		justify-content: center;
		background-position: center;
		background-size: cover;
		background-repeat: no-repeat;
		border-top: 0;
		min-height: 100vh;
		height: 100vh !important;
		position: relative;
		text-align: center;
		overflow: hidden;
	}

		#banner .inner {
			-moz-transform: scale(1.0);
			-webkit-transform: scale(1.0);
			-ms-transform: scale(1.0);
			transform: scale(1.0);
			-moz-transition: opacity 1s ease, -moz-transform 1s ease;
			-webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
			-ms-transition: opacity 1s ease, -ms-transform 1s ease;
			transition: opacity 1s ease, transform 1s ease;
			opacity: 1;
			position: relative;
			z-index: 2;
		}

		#banner h1 {
			font-size: 4em;
			margin-bottom: .25em;
			color: #FFF;
		}

		#banner p {
			color: rgba(255, 255, 255, 0.85);
			font-size: 1.75em;
		}

	@-moz-keyframes more {
		0% {
			bottom: -3em;
		}

		100% {
			bottom: 0;
		}
	}

	@-webkit-keyframes more {
		0% {
			bottom: -3em;
		}

		100% {
			bottom: 0;
		}
	}

	@-ms-keyframes more {
		0% {
			bottom: -3em;
		}

		100% {
			bottom: 0;
		}
	}

	@keyframes more {
		0% {
			bottom: -3em;
		}

		100% {
			bottom: 0;
		}
	}

		#banner:before {
			-moz-transition: opacity 3s ease;
			-webkit-transition: opacity 3s ease;
			-ms-transition: opacity 3s ease;
			transition: opacity 3s ease;
			-moz-transition-delay: 1.25s;
			-webkit-transition-delay: 1.25s;
			-ms-transition-delay: 1.25s;
			transition-delay: 1.25s;
			content: '';
			display: block;
			background-color: #000;
			height: 100%;
			left: 0;
			opacity: 0.65;
			position: absolute;
			top: 0;
			width: 100%;
			z-index: 1;
		}

		@media screen and (max-width: 980px) {

			#banner {
				font-size: .85em;
			}

				#banner br {
					display: none;
				}

		}

		@media screen and (max-width: 736px) {

			#banner {
				min-height: 0;
				padding: 8em 2em 4em 2em;
			}

				#banner .inner {
					width: 100%;
				}

				#banner h1 {
					font-size: 1.75em;
					margin-bottom: 0.5em;
					padding-bottom: 0;
				}

				#banner p {
					font-size: 1.25em;
				}

				#banner .button {
					width: 100%;
				}

		}

		@media screen and (max-width: 480px) {

			#banner p {
				font-size: 1em;
			}

		}

		body.is-loading #banner .inner {
			-moz-transform: scale(0.99);
			-webkit-transform: scale(0.99);
			-ms-transform: scale(0.99);
			transform: scale(0.99);
			opacity: 0;
		}

		body.is-loading #banner:before {
			opacity: 1;
		}

/* Footer */

	#footer {
		padding: 6em 2em 4em 2em;
	}

		#footer > .inner {
			margin: 0 auto;
			width: 80em;
		}

.copyright {
	color: #bfbfbf;
	font-size: 0.9em;
	margin: 0 0 2em 0;
	padding: 0;
	text-align: center;
}
.copyright a{
	text-decoration: none !important;
	color: black !important;
	font-weight: 900 !important;
}
.copyright .icons a {
	border-radius: 100%;
	box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 4px #fff, 0px 0px 0px 5px rgba(0, 0, 0, 0.1);
	display: block;
	font-size: 1em;
	height: 3em;
	line-height: 3em;
	margin: 0 auto 0.7em;
	text-align: center;
	width: 3em;
}
		#footer .copyright {
			color: #bfbfbf;
			font-size: 0.9em;
			margin: 0 0 2em 0;
			padding: 0;
			text-align: center;
		}

			#footer .copyright .icons a {
				border-radius: 100%;
				box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 4px #fff, 0px 0px 0px 5px rgba(0, 0, 0, 0.1);
				display: block;
				font-size: 1em;
				height: 3em;
				line-height: 3em;
				margin: 0 auto 0.7em;
				text-align: center;
				width: 3em;
			}

		@media screen and (max-width: 1280px) {

			#footer > .inner {
				width: 65em;
			}

		}

		@media screen and (max-width: 980px) {

			#footer > .inner {
				width: 90%;
			}

		}

		@media screen and (max-width: 736px) {

			#footer {
				padding: 3em 1em 1em 1em;
			}

		}

